# MyVideoPlayer-Client

./: .gitignore  README.md
MyVideoPlayer-Client/: CMakeLists.txt  adminwidget.cpp  adminwidget.h  adminwidget.ui  avatarbutton.cpp  avatarbutton.h  barrageedit.cpp  barrageedit.h  bulletscreenitem.cpp  bulletscreenitem.h  checktable.cpp  checktable.h  checktable.ui  checktableitem.cpp  checktableitem.h  checktableitem.ui  editadmindialog.cpp  editadmindialog.h  editadmindialog.ui  homepagewidget.cpp  homepagewidget.h  homepagewidget.ui  images.qrc  login.cpp  login.h  login.ui  main.cpp  modifymyselfdialog.cpp  modifymyselfdialog.h  modifymyselfdialog.ui  myselfwidget.cpp  myselfwidget.h  myselfwidget.ui  newpassworddialog.cpp  newpassworddialog.h  newpassworddialog.ui  pagebutton.cpp  pagebutton.h  pageswitchbutton.cpp  pageswitchbutton.h  (+36 more)
MyVideoPlayer-Client/model/: data.cpp  data.h  datacenter.cpp  datacenter.h
MyVideoPlayer-Client/mpv/mpv/: mpvplayer.cpp  mpvplayer.h  qthelper.hpp
